--- a/index.html
+++ b/index.html
@@ -5,12 +5,48 @@
 
   <link rel="stylesheet" type="text/css" href="style.css" />
   <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
+
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
+
   <script src="https://apis.google.com/js/platform.js" async defer></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 </head>
 
 <body>
 
+<div id="site">
+  <div id="headerBackground">
+    <div id="header">
+      <div class="header-inner">
+        <div class="logoWrapper">
+          <h1 id="logoImage">
+            <a href="/">
+              <img src="img/logo.png"></img>
+            </a>
+          </h1>
+        </div>
+        <div id="headerNav">
+          <div class="navWrapper">
+            <ul>
+              <li class="home active"><a href="/">Home</a></li>
+              <li class="apps"><a href="/apps">Apps</a></li>
+              <li class="blog"><a href="/blog">Blog</a></li>
+              <li class="about"><a href="/about">About</a></li>
+              <li class="contact"><a href="/contact">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="codeTemp">
+      <div class="infoPanel">
+        <h1>Much programming Creating apps</h1>
+        <a href="/">Learn more</a>
+      </div>
+    </div>
+  </div>
+</div>
 
 <script src="js/app.js"></script>
 </body>
