Added footer and basic content area

--- a/contact/index.html
+++ b/contact/index.html
@@ -29,11 +29,11 @@
         <div id="headerNav">
           <div class="navWrapper">
             <ul>
-              <li class="home"><a href="../">Home</a></li>
+              <li class="home"><a href="/">Home</a></li>
               <li class="apps"><a href="../apps">Apps</a></li>
               <li class="blog"><a href="../blog">Blog</a></li>
               <li class="about"><a href="../about">About</a></li>
-              <li class="contact active"><a href="/">Contact</a></li>
+              <li class="contact active"><a href="../contact">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -42,7 +42,30 @@
 
     <div id="codeTemp">
       <div class="infoPanel">
-        <h1>Contact me</h1>
+        <h1>Get in touch</h1>
+      </div>
+    </div>
+  </div>
+
+  <div class="content">
+    <a>Contact form</a>
+  </div>
+
+  <div id="footer">
+    <div class="footer-inner">
+      <div id="footer-nav">
+        <div class="footer-navWrapper">
+          <ul>
+            <li class="home"><a href="/">Home</a></li>
+            <li class="apps"><a href="../apps">Apps</a></li>
+            <li class="blog"><a href="../blog">Blog</a></li>
+            <li class="about"><a href="../about">About</a></li>
+            <li class="contact"><a href="../contact">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+      <div id="copyright">
+        <p class="centre-text">© 2017 Zac Hadjineophytou</p>
       </div>
     </div>
   </div>
