--- a/about/index.html
+++ b/about/index.html
@@ -29,10 +29,10 @@
         <div id="headerNav">
           <div class="navWrapper">
             <ul>
-              <li class="home"><a href="../">Home</a></li>
+              <li class="home"><a href="/">Home</a></li>
               <li class="apps"><a href="../apps">Apps</a></li>
               <li class="blog"><a href="../blog">Blog</a></li>
-              <li class="about active"><a href="/">About</a></li>
+              <li class="about active"><a href="../about">About</a></li>
               <li class="contact"><a href="../contact">Contact</a></li>
             </ul>
           </div>
@@ -43,6 +43,29 @@
     <div id="codeTemp">
       <div class="infoPanel">
         <h1>About me</h1>
+      </div>
+    </div>
+  </div>
+
+  <div class="content">
+    <a>We can place some content here</a>
+  </div>
+
+  <div id="footer">
+    <div class="footer-inner">
+      <div id="footer-nav">
+        <div class="footer-navWrapper">
+          <ul>
+            <li class="home"><a href="/">Home</a></li>
+            <li class="apps"><a href="../apps">Apps</a></li>
+            <li class="blog"><a href="../blog">Blog</a></li>
+            <li class="about"><a href="../about">About</a></li>
+            <li class="contact"><a href="../contact">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+      <div id="copyright">
+        <p class="centre-text">© 2017 Zac Hadjineophytou</p>
       </div>
     </div>
   </div>
