Moved styles related to about to about.css. Fixed spacing and font issue

--- a/about/index.html
+++ b/about/index.html
@@ -4,6 +4,7 @@
   <title>About</title>
 
   <link rel="stylesheet" type="text/css" href="../style.css" />
+  <link rel="stylesheet" type="text/css" href="about.css" />
 
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
 
@@ -50,7 +51,7 @@
   <div class="content">
     <div class="technologies">
       <div id="column-1">
-        <h2>Technologies</h2>
+        <h2 style="margin-top: 0px;">Technologies</h2>
       </div>
       <div id="column-2">
         <h3>Experience with</h3>
