Home page 3 main features added. About me content update.

--- a/about/index.html
+++ b/about/index.html
@@ -61,10 +61,11 @@
           <li>Python</li>
           <li>HTML</li>
           <li>CSS</li>
-          <li>PHP</li>
+          <li>PHP (Limited)</li>
           <li>GIT</li>
           <li>MySQL</li>
           <li>Apache</li>
+          <li>AngularJS (Limited)</li>
         </ul>
       </div>
 
