--- a/apps/index.html
+++ b/apps/index.html
@@ -43,7 +43,7 @@
     <div id="codeTemp">
       <div class="infoPanel">
         <h1>Apps</h1>
-        <a href="">Google Play</a>
+        <a href="https://play.google.com/store/apps/dev?id=9074979777321158995&hl=en">Google Play</a>
       </div>
     </div>
   </div>
