--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Zac Hadjineophytou</title>
 
   <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="home.css" />
 
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
 
@@ -49,7 +50,28 @@
   </div>
 
   <div class="content">
-    <a>We can place some content here</a>
+    <div class="advert">
+      <div id="heading">
+        <h1>Giving you a seamless experience no matter which app you use.</h1>
+      </div>
+
+      <div class="three-images">
+        <div id="item1">
+          <img src="img/code.png"/>
+          <h4>Writing apps for android and creating an experience tailored for you.</h4>
+        </div>
+
+        <div id="item2">
+          <img src="img/code.png"/>
+          <h4>A UI you will recognise. By following the android guidlines, all our apps have a fluid word.</h4>
+        </div>
+
+        <div id="item3">
+          <img src="img/code.png"/>
+          <h4>Working towards a range of apps to make everyday tasks that little bit easier.</h4>
+        </div>
+      </div>
+    </div>
   </div>
 
   <div id="footer">
