Removed pointless links from pages.Updated theme of googleplay button.

--- a/contact/index.html
+++ b/contact/index.html
@@ -33,7 +33,7 @@
               <li class="apps"><a href="../apps">Apps</a></li>
               <li class="blog"><a href="../blog">Blog</a></li>
               <li class="about"><a href="../about">About</a></li>
-              <li class="contact active"><a href="../contact">Contact</a></li>
+              <li class="contact active"><a>Contact</a></li>
             </ul>
           </div>
         </div>
@@ -60,7 +60,7 @@
             <li class="apps"><a href="../apps">Apps</a></li>
             <li class="blog"><a href="../blog">Blog</a></li>
             <li class="about"><a href="../about">About</a></li>
-            <li class="contact"><a href="../contact">Contact</a></li>
+            <li class="contact"><a>Contact</a></li>
           </ul>
         </div>
       </div>
