--- a/about/index.html
+++ b/about/index.html
@@ -33,7 +33,7 @@
               <li class="home"><a href="/">Home</a></li>
               <li class="apps"><a href="../apps">Apps</a></li>
               <li class="blog"><a href="../blog">Blog</a></li>
-              <li class="about active"><a href="../about">About</a></li>
+              <li class="about active"><a>About</a></li>
               <li class="contact"><a href="../contact">Contact</a></li>
             </ul>
           </div>
@@ -96,7 +96,7 @@
             <li class="home"><a href="/">Home</a></li>
             <li class="apps"><a href="../apps">Apps</a></li>
             <li class="blog"><a href="../blog">Blog</a></li>
-            <li class="about"><a href="../about">About</a></li>
+            <li class="about"><a>About</a></li>
             <li class="contact"><a href="../contact">Contact</a></li>
           </ul>
         </div>
