--- a/apps/index.html
+++ b/apps/index.html
@@ -4,6 +4,7 @@
   <title>Zac Hadjineophytou</title>
 
   <link rel="stylesheet" type="text/css" href="../style.css" />
+  <link rel="stylesheet" type="text/css" href="apps.css" />
 
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
 
@@ -30,7 +31,7 @@
           <div class="navWrapper">
             <ul>
               <li class="home"><a href="/">Home</a></li>
-              <li class="apps active"><a href="../apps">Apps</a></li>
+              <li class="apps active"><a>Apps</a></li>
               <li class="blog"><a href="../blog">Blog</a></li>
               <li class="about"><a href="../about">About</a></li>
               <li class="contact"><a href="../contact">Contact</a></li>
@@ -41,7 +42,7 @@
     </div>
 
     <div id="codeTemp">
-      <div class="infoPanel">
+      <div class="appsInfoPanel">
         <h1>Apps</h1>
         <a href="https://play.google.com/store/apps/dev?id=9074979777321158995&hl=en">Google Play</a>
       </div>
@@ -58,7 +59,7 @@
         <div class="footer-navWrapper">
           <ul>
             <li class="home"><a href="/">Home</a></li>
-            <li class="apps"><a href="../apps">Apps</a></li>
+            <li class="apps"><a>Apps</a></li>
             <li class="blog"><a href="../blog">Blog</a></li>
             <li class="about"><a href="../about">About</a></li>
             <li class="contact"><a href="../contact">Contact</a></li>
