--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id="headerNav">
           <div class="navWrapper">
             <ul>
-              <li class="home active"><a href="/">Home</a></li>
+              <li class="home active"><a>Home</a></li>
               <li class="apps"><a href="/apps">Apps</a></li>
               <li class="blog"><a href="/blog">Blog</a></li>
               <li class="about"><a href="/about">About</a></li>
@@ -79,7 +79,7 @@
       <div id="footer-nav">
         <div class="footer-navWrapper">
           <ul>
-            <li class="home"><a href="/">Home</a></li>
+            <li class="home"><a>Home</a></li>
             <li class="apps"><a href="/apps">Apps</a></li>
             <li class="blog"><a href="/blog">Blog</a></li>
             <li class="about"><a href="/about">About</a></li>
