Updated header images for each page. Started contacts form.

--- a/apps/index.html
+++ b/apps/index.html
@@ -17,7 +17,7 @@
 <body>
 
 <div id="site">
-  <div id="headerBackground">
+  <div id="appsBackground">
     <div id="header">
       <div class="header-inner">
         <div class="logoWrapper">
