--- a/contact/index.html
+++ b/contact/index.html
@@ -4,6 +4,7 @@
   <title>Zac Hadjineophytou</title>
 
   <link rel="stylesheet" type="text/css" href="../style.css" />
+  <link rel="stylesheet" type="text/css" href="contact.css" />
 
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
 
@@ -16,7 +17,7 @@
 <body>
 
 <div id="site">
-  <div id="headerBackground">
+  <div id="contactBackground">
     <div id="header">
       <div class="header-inner">
         <div class="logoWrapper">
@@ -48,7 +49,14 @@
   </div>
 
   <div class="content">
-    <a>Contact form</a>
+    <div class="formWrapper">
+      <form autocomplete="on">
+        <div id="name">
+          <label>First Name<input/></label>
+          <label>Last Name<input/></label>
+        </div>
+      </form>
+    </div>
   </div>
 
   <div id="footer">
