--- a/contact/index.html
+++ b/contact/index.html
@@ -52,8 +52,8 @@
     <div class="formWrapper">
       <form autocomplete="on">
         <div id="name">
-          <label>First Name<input/></label>
-          <label>Last Name<input/></label>
+          <label><input/>First Name</label>
+          <label><input/>Last Name</label>
         </div>
       </form>
     </div>
