--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div id="codeTemp">
       <div class="infoPanel">
-        <h1>Much programming Creating apps</h1>
+        <h1>Hello, World!</h1>
         <a href="https://github.com/zacdevil10">Github</a>
       </div>
     </div>
