Edit message about our apps.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div class="content">
     <div class="advert">
       <div id="heading">
-        <h1>Giving you a seamless experience no matter which app you use.</h1>
+        <h1>Giving you a seamless experience.</h1>
       </div>
 
       <div class="three-images">
