External links open new tab. Apps renamed to portfolio.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,10 +1,10 @@
 <DOCTYPE html>
 <head>
   <meta charset="utf-8">
-  <title>Zac Hadjineophytou</title>
+  <title>Portfolio - Zac Hadjineophytou</title>
 
   <link rel="stylesheet" type="text/css" href="../style.css" />
-  <link rel="stylesheet" type="text/css" href="apps.css" />
+  <link rel="stylesheet" type="text/css" href="portfolio.css" />
 
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
 
@@ -31,7 +31,7 @@
           <div class="navWrapper">
             <ul>
               <li class="home"><a href="/">Home</a></li>
-              <li class="apps active"><a>Apps</a></li>
+              <li class="apps active"><a>Portfolio</a></li>
               <li class="blog"><a href="../blog">Blog</a></li>
               <li class="about"><a href="../about">About</a></li>
               <li class="contact"><a href="../contact">Contact</a></li>
@@ -44,7 +44,7 @@
     <div id="codeTemp">
       <div class="appsInfoPanel">
         <h1>Apps</h1>
-        <a href="https://play.google.com/store/apps/dev?id=9074979777321158995&hl=en">Google Play</a>
+        <a href="https://play.google.com/store/apps/dev?id=9074979777321158995&hl=en" target="_blank">Google Play</a>
       </div>
     </div>
   </div>
@@ -59,7 +59,7 @@
         <div class="footer-navWrapper">
           <ul>
             <li class="home"><a href="/">Home</a></li>
-            <li class="apps"><a>Apps</a></li>
+            <li class="apps"><a>Portfolio</a></li>
             <li class="blog"><a href="../blog">Blog</a></li>
             <li class="about"><a href="../about">About</a></li>
             <li class="contact"><a href="../contact">Contact</a></li>
