--- a/about/index.html
+++ b/about/index.html
@@ -31,7 +31,7 @@
           <div class="navWrapper">
             <ul>
               <li class="home"><a href="/">Home</a></li>
-              <li class="apps"><a href="../apps">Apps</a></li>
+              <li class="apps"><a href="../portfolio">Portfolio</a></li>
               <li class="blog"><a href="../blog">Blog</a></li>
               <li class="about active"><a>About</a></li>
               <li class="contact"><a href="../contact">Contact</a></li>
@@ -94,7 +94,7 @@
         <div class="footer-navWrapper">
           <ul>
             <li class="home"><a href="/">Home</a></li>
-            <li class="apps"><a href="../apps">Apps</a></li>
+            <li class="apps"><a href="../portfolio">Portfolio</a></li>
             <li class="blog"><a href="../blog">Blog</a></li>
             <li class="about"><a>About</a></li>
             <li class="contact"><a href="../contact">Contact</a></li>
