--- a/contact/index.html
+++ b/contact/index.html
@@ -31,7 +31,7 @@
           <div class="navWrapper">
             <ul>
               <li class="home"><a href="/">Home</a></li>
-              <li class="apps"><a href="../apps">Apps</a></li>
+              <li class="apps"><a href="../portfolio">Portfolio</a></li>
               <li class="blog"><a href="../blog">Blog</a></li>
               <li class="about"><a href="../about">About</a></li>
               <li class="contact active"><a>Contact</a></li>
@@ -99,7 +99,7 @@
         <div class="footer-navWrapper">
           <ul>
             <li class="home"><a href="/">Home</a></li>
-            <li class="apps"><a href="../apps">Apps</a></li>
+            <li class="apps"><a href="../portfolio">Portfolio</a></li>
             <li class="blog"><a href="../blog">Blog</a></li>
             <li class="about"><a href="../about">About</a></li>
             <li class="contact"><a>Contact</a></li>
