--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="navWrapper">
             <ul>
               <li class="home active"><a>Home</a></li>
-              <li class="apps"><a href="/apps">Apps</a></li>
+              <li class="apps"><a href="/portfolio">Portfolio</a></li>
               <li class="blog"><a href="/blog">Blog</a></li>
               <li class="about"><a href="/about">About</a></li>
               <li class="contact"><a href="/contact">Contact</a></li>
@@ -44,7 +44,7 @@
     <div id="codeTemp">
       <div class="infoPanel">
         <h1>Hello, World!</h1>
-        <a href="https://github.com/zacdevil10">Github</a>
+        <a href="https://github.com/zacdevil10" target="_blank">Github</a>
       </div>
     </div>
   </div>
@@ -80,7 +80,7 @@
         <div class="footer-navWrapper">
           <ul>
             <li class="home"><a>Home</a></li>
-            <li class="apps"><a href="/apps">Apps</a></li>
+            <li class="apps"><a href="/portfolio">Portfolio</a></li>
             <li class="blog"><a href="/blog">Blog</a></li>
             <li class="about"><a href="/about">About</a></li>
             <li class="contact"><a href="/contact">Contact</a></li>
