General layout for portfolio page. Still to add pictures.

--- a/contact/index.html
+++ b/contact/index.html
@@ -10,6 +10,7 @@
 
   <script src="https://apis.google.com/js/platform.js" async defer></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+  <script src='https://www.google.com/recaptcha/api.js'></script>
 
   <link rel="icon" type="image/x-icon" href="../img/favicon.ico" />
 </head>
@@ -85,7 +86,7 @@
 
         <div id="send">
           <div class="button send">
-            <input type="submit" value="Send Message">
+            <input type="submit" value="Send Message" class="g-recaptcha" data-sitekey="6Lf0cCkUAAAAAGfWmcyfOL3A0r7Ty7OA7FWkBI6u" data-callback="">
           </div>
         </div>
 
