removed home page and blog

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
   <title>Portfolio - Zac Hadjineophytou</title>
 
-  <link rel="stylesheet" type="text/css" href="../style.css" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
   <link rel="stylesheet" type="text/css" href="portfolio.css" />
 
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
@@ -22,7 +22,7 @@
 
   </script>
 
-  <link rel="icon" type="image/x-icon" href="../img/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <div class="logoWrapper">
           <h1 id="logoImage">
             <a href="/">
-              <img src="../img/logo.png"></img>
+              <img src="/img/logo.png"></img>
             </a>
           </h1>
         </div>
@@ -105,7 +105,7 @@
   </div>
 </div>
 
-<script src="../js/app.js"></script>
+<script src="/js/app.js"></script>
 </body>
 
 </html>
