--- a/about/index.html
+++ b/about/index.html
@@ -41,9 +41,9 @@
         <div id="headerNav">
           <div class="navWrapper">
             <ul>
-              <li class="home"><a href="/">Home</a></li>
-              <li class="apps"><a href="../portfolio">Portfolio</a></li>
-              <li class="blog"><a href="../blog">Blog</a></li>
+              <!--li class="home"><a href="/">Home</a></li!-->
+              <li class="apps"><a href="/">Portfolio</a></li>
+              <!--li class="blog"><a href="../blog">Blog</a></li!-->
               <li class="about active"><a>About</a></li>
               <li class="contact"><a href="../contact">Contact</a></li>
             </ul>
@@ -105,9 +105,9 @@
       <div id="footer-nav">
         <div class="footer-navWrapper">
           <ul>
-            <li class="home"><a href="/">Home</a></li>
-            <li class="apps"><a href="../portfolio">Portfolio</a></li>
-            <li class="blog"><a href="../blog">Blog</a></li>
+            <!--li class="home"><a href="/">Home</a></li!-->
+            <li class="apps"><a href="/">Portfolio</a></li>
+            <!--li class="blog"><a href="../blog">Blog</a></li!-->
             <li class="about"><a>About</a></li>
             <li class="contact"><a href="../contact">Contact</a></li>
           </ul>
