--- a/contact/index.html
+++ b/contact/index.html
@@ -42,9 +42,9 @@
         <div id="headerNav">
           <div class="navWrapper">
             <ul>
-              <li class="home"><a href="/">Home</a></li>
-              <li class="apps"><a href="../portfolio">Portfolio</a></li>
-              <li class="blog"><a href="../blog">Blog</a></li>
+              <!--li class="home"><a href="/">Home</a></li!-->
+              <li class="apps"><a href="/">Portfolio</a></li>
+              <!--li class="blog"><a href="../blog">Blog</a></li!-->
               <li class="about"><a href="../about">About</a></li>
               <li class="contact active"><a>Contact</a></li>
             </ul>
@@ -110,9 +110,9 @@
       <div id="footer-nav">
         <div class="footer-navWrapper">
           <ul>
-            <li class="home"><a href="/">Home</a></li>
-            <li class="apps"><a href="../portfolio">Portfolio</a></li>
-            <li class="blog"><a href="../blog">Blog</a></li>
+            <!--li class="home"><a href="/">Home</a></li!-->
+            <li class="apps"><a href="/">Portfolio</a></li>
+            <!--li class="blog"><a href="../blog">Blog</a></li!-->
             <li class="about"><a href="../about">About</a></li>
             <li class="contact"><a>Contact</a></li>
           </ul>
