Updated about page

--- a/about/index.html
+++ b/about/index.html
@@ -67,17 +67,21 @@
       <div id="column-2">
         <h3>Experience with</h3>
         <ul>
+          <li>Android Development</li>
+          <li>Java</li>
           <li>Python</li>
           <li>HTML</li>
-          <li>Java</li>
+          <li>JavaScript</li>
           <li>CSS</li>
           <li>PHP (Limited)</li>
           <li>AngularJS (Limited)</li>
           <br/>
           <li>Android Studio</li>
-          <li>GIT</li>
+          <li>Firebase</li>
+          <li>Github</li>
           <li>MySQL</li>
           <li>Apache</li>
+          <li>Amazon Web Services</li>
         </ul>
       </div>
 
