Added home page

--- a/contact/index.html
+++ b/contact/index.html
@@ -42,8 +42,8 @@
         <div id="headerNav">
           <div class="navWrapper">
             <ul>
-              <!--li class="home"><a href="/">Home</a></li!-->
-              <li class="apps"><a href="/">Portfolio</a></li>
+              <li class="home"><a href="/">Home</a></li>
+              <li class="apps"><a href="../portfolio">Portfolio</a></li>
               <!--li class="blog"><a href="../blog">Blog</a></li!-->
               <li class="about"><a href="../about">About</a></li>
               <li class="contact active"><a>Contact</a></li>
@@ -62,7 +62,7 @@
 
   <div class="content">
     <div class="formWrapper">
-      <form class="form" action="" method="post" autocomplete="on">
+      <form class="form" action="contact.php" method="post" autocomplete="on">
 
         <div id="name">
           <div class="title nameTitle">
@@ -97,7 +97,7 @@
 
         <div id="send">
           <div class="button send">
-            <input type="submit" value="Send Message" class="g-recaptcha" data-sitekey="6Lf0cCkUAAAAAGfWmcyfOL3A0r7Ty7OA7FWkBI6u" data-callback="">
+            <input id="submit" name="submit" type="submit" value="Send Message" class="g-recaptcha" data-sitekey="6Lf0cCkUAAAAAGfWmcyfOL3A0r7Ty7OA7FWkBI6u" data-callback="">
           </div>
         </div>
 
@@ -110,8 +110,8 @@
       <div id="footer-nav">
         <div class="footer-navWrapper">
           <ul>
-            <!--li class="home"><a href="/">Home</a></li!-->
-            <li class="apps"><a href="/">Portfolio</a></li>
+            <li class="home"><a href="/">Home</a></li>
+            <li class="apps"><a href="../portfolio">Portfolio</a></li>
             <!--li class="blog"><a href="../blog">Blog</a></li!-->
             <li class="about"><a href="../about">About</a></li>
             <li class="contact"><a>Contact</a></li>
