--- a/about/index.html
+++ b/about/index.html
@@ -28,7 +28,7 @@
 <body>
 
 <div id="site" ng-app="jobsView">
-  <div id="headerBackground">
+  <div class="headerBackground">
     <div id="header">
       <div class="header-inner">
         <div class="logoWrapper">
@@ -41,8 +41,8 @@
         <div id="headerNav">
           <div class="navWrapper">
             <ul>
-              <!--li class="home"><a href="/">Home</a></li!-->
-              <li class="apps"><a href="/">Portfolio</a></li>
+              <li class="home"><a href="../">Home</a></li>
+              <li class="apps"><a href="../portfolio">Portfolio</a></li>
               <!--li class="blog"><a href="../blog">Blog</a></li!-->
               <li class="about active"><a>About</a></li>
               <li class="contact"><a href="../contact">Contact</a></li>
@@ -109,8 +109,8 @@
       <div id="footer-nav">
         <div class="footer-navWrapper">
           <ul>
-            <!--li class="home"><a href="/">Home</a></li!-->
-            <li class="apps"><a href="/">Portfolio</a></li>
+            <li class="home"><a href="../">Home</a></li>
+            <li class="apps"><a href="../portfolio">Portfolio</a></li>
             <!--li class="blog"><a href="../blog">Blog</a></li!-->
             <li class="about"><a>About</a></li>
             <li class="contact"><a href="../contact">Contact</a></li>
