--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <DOCTYPE html>
 <head>
   <meta charset="utf-8">
-  <title>Portfolio - Zac Hadjineophytou</title>
+  <title>Zac Hadjineophytou</title>
 
   <link rel="stylesheet" type="text/css" href="style.css" />
-  <link rel="stylesheet" type="text/css" href="portfolio.css" />
+  <link rel="stylesheet" type="text/css" href="home.css" />
 
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
 
@@ -28,7 +28,7 @@
 <body>
 
 <div id="site">
-  <div id="appsBackground">
+  <div class="headerBackground full">
     <div id="header">
       <div class="header-inner">
         <div class="logoWrapper">
@@ -41,9 +41,9 @@
         <div id="headerNav">
           <div class="navWrapper">
             <ul>
-              <!--li class="home"><a href="/">Home</a></li!-->
-              <li class="apps active"><a>Portfolio</a></li>
-              <!--li class="blog"><a href="../blog">Blog</a></li!-->
+              <li class="home active"><a>Home</a></li>
+              <li class="apps"><a href="/portfolio">Portfolio</a></li>
+              <!-- <li class="blog"><a href="/blog">Blog</a></li> -->
               <li class="about"><a href="/about">About</a></li>
               <li class="contact"><a href="/contact">Contact</a></li>
             </ul>
@@ -53,57 +53,12 @@
     </div>
 
     <div id="codeTemp">
-      <div class="appsInfoPanel">
-        <h1>Portfolio</h1>
-        <a href="https://play.google.com/store/apps/dev?id=9074979777321158995&hl=en" target="_blank">Google Play</a>
+      <div class="infoPanel">
+        <h1>Hello, World!</h1>
+        <a href="https://github.com/zacdevil10" target="_blank">Github</a>
       </div>
     </div>
   </div>
-
-  <div class="content" ng-app="appView">
-    <div class="appsWrapper" ng-controller="appController">
-      <div class="appsView" ng-repeat="app in apps">
-        <div id="column-1">
-          <img src="{{app.img}}" style="max-width: 200px;">
-        </div>
-        <div id="column-2">
-          <div id="descriptionView">
-            <h3 style="color: {{app.color}};">{{app.name}}</h3>
-            <p>{{app.desc}}</p>
-          </div>
-
-        </div>
-        <div id="appLinks">
-          <a href="{{app.website}}" ng-if="app.website" target="_blank">Website</a>
-          <a href="{{app.playlink}}" ng-if="app.playlink" target="_blank">Google Play</a>
-          <a href="{{app.gitlink}}" ng-if="app.gitlink" target="_blank">Source Code</a>
-        </div>
-        <div id="separator">
-          <hr>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div id="footer">
-    <div class="footer-inner">
-      <div id="footer-nav">
-        <div class="footer-navWrapper">
-          <ul>
-            <!--li class="home"><a href="/">Home</a></li!-->
-            <li class="apps"><a>Portfolio</a></li>
-            <!--li class="blog"><a href="../blog">Blog</a></li!-->
-            <li class="about"><a href="../about">About</a></li>
-            <li class="contact"><a href="../contact">Contact</a></li>
-          </ul>
-        </div>
-      </div>
-      <div id="copyright">
-        <p class="centre-text">© 2017 Zac Hadjineophytou</p>
-      </div>
-    </div>
-  </div>
-</div>
 
 <script src="js/app.js"></script>
 </body>
