--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
   <title>Portfolio - Zac Hadjineophytou</title>
 
-  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="../style.css" />
   <link rel="stylesheet" type="text/css" href="portfolio.css" />
 
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
@@ -22,7 +22,7 @@
 
   </script>
 
-  <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="../img/favicon.ico" />
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <div class="logoWrapper">
           <h1 id="logoImage">
             <a href="/">
-              <img src="/img/logo.png"></img>
+              <img src="../img/logo.png"></img>
             </a>
           </h1>
         </div>
@@ -43,7 +43,7 @@
             <ul>
               <li class="home"><a href="/">Home</a></li>
               <li class="apps active"><a>Portfolio</a></li>
-              <li class="blog"><a href="../blog">Blog</a></li>
+              <!--li class="blog"><a href="../blog">Blog</a></li!-->
               <li class="about"><a href="../about">About</a></li>
               <li class="contact"><a href="../contact">Contact</a></li>
             </ul>
@@ -92,7 +92,7 @@
           <ul>
             <li class="home"><a href="/">Home</a></li>
             <li class="apps"><a>Portfolio</a></li>
-            <li class="blog"><a href="../blog">Blog</a></li>
+            <!--li class="blog"><a href="../blog">Blog</a></li!-->
             <li class="about"><a href="../about">About</a></li>
             <li class="contact"><a href="../contact">Contact</a></li>
           </ul>
@@ -105,7 +105,7 @@
   </div>
 </div>
 
-<script src="/js/app.js"></script>
+<script src="../js/app.js"></script>
 </body>
 
 </html>
