Added name to home page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <head>
   <meta charset="utf-8">
   <title>Zac Hadjineophytou</title>
@@ -27,16 +27,12 @@
 
 <body>
 
-<div id="site">
+<div class="site">
   <div class="headerBackground full">
     <div id="header">
       <div class="header-inner">
-        <div class="logoWrapper">
-          <h1 id="logoImage">
-            <a href="/">
-              <img src="img/logo.png"></img>
-            </a>
-          </h1>
+        <div class="logo-wrapper">
+          <a href="/"><h1>Zac Hadjineophytou</h1></a>
         </div>
         <div id="headerNav">
           <div class="navWrapper">
