--- a/contact/index.html
+++ b/contact/index.html
@@ -1,4 +1,4 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <head>
   <meta charset="utf-8">
   <title>Contact - Zac Hadjineophytou</title>
@@ -32,12 +32,8 @@
   <div id="contactBackground">
     <div id="header">
       <div class="header-inner">
-        <div class="logoWrapper">
-          <h1 id="logoImage">
-            <a href="/">
-              <img src="../img/logo.png"></img>
-            </a>
-          </h1>
+        <div class="logo-wrapper">
+          <a href="/"><h1>Zac Hadjineophytou</h1></a>
         </div>
         <div id="headerNav">
           <div class="navWrapper">
