Added Kotlin to about page

--- a/about/index.html
+++ b/about/index.html
@@ -65,9 +65,10 @@
         <ul>
           <li>Android Development</li>
           <li>Java</li>
+          <li>Kotlin</li>
           <li>Python</li>
           <li>HTML</li>
-          <li>JavaScript</li>
+          <li>JavaScript (Limited)</li>
           <li>CSS</li>
           <li>PHP (Limited)</li>
           <li>AngularJS (Limited)</li>
@@ -77,7 +78,7 @@
           <li>Github</li>
           <li>MySQL</li>
           <li>Apache</li>
-          <li>Amazon Web Services</li>
+          <li>Amazon Web Services (Limited)</li>
         </ul>
       </div>
 
