Updated app descriptions

--- a/contact/index.html
+++ b/contact/index.html
@@ -51,7 +51,7 @@
 
     <div id="codeTemp">
       <div class="infoPanel">
-        <h1>Get in touch</h1>
+        <h1>Get in touch [Not Yet Implemented]</h1>
       </div>
     </div>
   </div>
