--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
+<html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <title>Zac Hadjineophytou</title>
 
   <link rel="stylesheet" type="text/css" href="style.css" />
@@ -11,51 +14,35 @@
   <script src="https://apis.google.com/js/platform.js" async defer></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-103028351-1', 'auto');
-    ga('send', 'pageview');
-
-  </script>
-
   <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
 </head>
 
 <body>
 
 <div class="site">
-  <div class="headerBackground full">
-    <div id="header">
-      <div class="header-inner">
-        <div class="logo-wrapper">
-          <a href="/"><h1>Zac Hadjineophytou</h1></a>
-        </div>
-        <div id="headerNav">
-          <div class="navWrapper">
-            <ul>
-              <li class="apps"><a href="/portfolio">Portfolio</a></li>
-              <!-- <li class="blog"><a href="/blog">Blog</a></li> -->
-              <li class="about"><a href="/about">About</a></li>
-              <li class="contact"><a href="/contact">Contact</a></li>
-            </ul>
-          </div>
-        </div>
+  <div class="container">
+    <div class="headerWrapper">
+      <div class="logo-wrapper">
+        <a href="/"><h1>Zac Hadjineophytou</h1></a>
+      </div>
+      <div class="navWrapper">
+        <ul>
+          <li class="apps"><a href="/portfolio">Portfolio</a></li>
+          <!-- <li class="blog"><a href="/blog">Blog</a></li> -->
+          <li class="about"><a href="/about">About</a></li>
+          <li class="contact"><a href="/contact">Contact</a></li>
+        </ul>
       </div>
     </div>
 
-    <div id="codeTemp">
-      <div class="infoPanel">
-        <h1>Hello, World!</h1>
-        <a href="https://github.com/zacdevil10" target="_blank">Github</a>
-      </div>
+    <div class="headingWrapper">
+      <h1>Hello, World!</h1>
+      <a href="https://github.com/zacdevil10" target="_blank">Github</a>
     </div>
   </div>
+</div>
 
 <script src="js/app.js"></script>
-</body>
 
+</body>
 </html>
