--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
+<html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Portfolio - Zac Hadjineophytou</title>
 
   <link rel="stylesheet" type="text/css" href="../style.css" />
@@ -10,16 +13,12 @@
 
   <script src="https://apis.google.com/js/platform.js" async defer></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 
   <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-103028351-1', 'auto');
-    ga('send', 'pageview');
-
+    $(function() {
+      $("#footer").load("../components/footer.html");
+    });
   </script>
 
   <link rel="icon" type="image/x-icon" href="../img/favicon.ico" />
@@ -27,32 +26,24 @@
 
 <body>
 
-<div id="site">
-  <div id="appsBackground">
-    <div id="header">
-      <div class="header-inner">
-        <div class="logo-wrapper">
-          <a href="/"><h1>Zac Hadjineophytou</h1></a>
-        </div>
-        <div id="headerNav">
-          <div class="navWrapper">
-            <ul>
-              <li class="home"><a href="/">Home</a></li>
-              <li class="apps active"><a>Portfolio</a></li>
-              <!--li class="blog"><a href="../blog">Blog</a></li!-->
-              <li class="about"><a href="../about">About</a></li>
-              <li class="contact"><a href="../contact">Contact</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
+<div class="site">
+  <div class="headerWrapper appsBackground">
+    <div class="logo-wrapper">
+      <a href="/"><h1>Zac Hadjineophytou</h1></a>
+    </div>
+    <div class="navWrapper">
+      <ul>
+        <li class="home"><a href="/">Home</a></li>
+        <li class="apps active"><a>Portfolio</a></li>
+        <!--li class="blog"><a href="../blog">Blog</a></li!-->
+        <li class="about"><a href="../about">About</a></li>
+        <li class="contact"><a href="../contact">Contact</a></li>
+      </ul>
     </div>
 
-    <div id="codeTemp">
-      <div class="infoPanel">
-        <h1>Portfolio</h1>
-        <a href="https://play.google.com/store/apps/dev?id=9074979777321158995&hl=en" target="_blank">Google Play</a>
-      </div>
+    <div class="headingWrapper">
+      <h1>Portfolio</h1>
+      <a href="https://play.google.com/store/apps/dev?id=9074979777321158995&hl=en" target="_blank">Google Play</a>
     </div>
   </div>
 
@@ -60,7 +51,7 @@
     <div class="appsWrapper" ng-controller="appController">
       <div class="appsView" ng-repeat="app in apps">
         <div id="column-1">
-          <img src="{{app.img}}" style="max-width: 200px;">
+          <img src="{{app.img}}">
         </div>
         <div id="column-2">
           <div id="descriptionView">
@@ -81,24 +72,7 @@
     </div>
   </div>
 
-  <div id="footer">
-    <div class="footer-inner">
-      <div id="footer-nav">
-        <div class="footer-navWrapper">
-          <ul>
-            <li class="home"><a href="/">Home</a></li>
-            <li class="apps"><a>Portfolio</a></li>
-            <!--li class="blog"><a href="../blog">Blog</a></li!-->
-            <li class="about"><a href="../about">About</a></li>
-            <li class="contact"><a href="../contact">Contact</a></li>
-          </ul>
-        </div>
-      </div>
-      <div id="copyright">
-        <p class="centre-text">© 2017 Zac Hadjineophytou</p>
-      </div>
-    </div>
-  </div>
+  <div id="footer"></div>
 </div>
 
 <script src="../js/app.js"></script>
