Portfolio and About pages scale to screen size

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -43,6 +43,7 @@
 
     <div class="headingWrapper">
       <h1>Portfolio</h1>
+      <a href="https://github.com/zacdevil10" target="_blank">Github</a>
       <a href="https://play.google.com/store/apps/dev?id=9074979777321158995&hl=en" target="_blank">Google Play</a>
     </div>
   </div>
