--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <title>Zac Hadjineophytou</title>
 
   <link rel="stylesheet" type="text/css" href="style.css" />
@@ -30,7 +30,7 @@
           <li class="apps"><a href="/portfolio">Portfolio</a></li>
           <!-- <li class="blog"><a href="/blog">Blog</a></li> -->
           <li class="about"><a href="/about">About</a></li>
-          <li class="contact"><a href="/contact">Contact</a></li>
+          <!-- <li class="contact"><a href="/contact">Contact</a></li> -->
         </ul>
       </div>
     </div>
