--- a/about/index.html
+++ b/about/index.html
@@ -66,21 +66,13 @@
         <h3>Experience with</h3>
         <ul>
           <li>Android Development</li>
-          <li>Java</li>
           <li>Kotlin</li>
+          <li>Java</li>
           <li>Python</li>
-          <li>HTML</li>
-          <li>JavaScript (Limited)</li>
-          <li>CSS</li>
-          <li>PHP (Limited)</li>
-          <li>AngularJS (Limited)</li>
           <br/>
           <li>Android Studio</li>
           <li>Firebase</li>
-          <li>Github</li>
-          <li>MySQL</li>
-          <li>Apache</li>
-          <li>Amazon Web Services (Limited)</li>
+          <li>Git</li>
         </ul>
       </div>
 
